Started Working on MainControl

--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,21 +1,19 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:FastCards.ViewModels"
+        xmlns:view_models="using:FastCards.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:uc="clr-namespace:FastCards.Views;assembly=FastCards"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 				x:Class="FastCards.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Fast Cards!" >
-	<!-- SystemDecorations="BorderOnly"-->
+				SystemDecorations="Full"
+				CanResize="True"
+				Background="#F2F2F2">
+
 	<Design.DataContext>
-		<vm:MainWindowViewModel/>
+		<view_models:MainWindowViewModel/>
 	</Design.DataContext>
 
-	<StackPanel>
-		<Button Command="{Binding Switch}">Switch</Button>
-		<ContentControl Content="{Binding Content}" />
-	</StackPanel>
+	<ContentControl Content="{Binding InnerViewModel}" />
 
 </Window>
